--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "express-winston": "^4.2.0",
+    "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "validator": "^13.7.0",
